Feat API and UI connection

--- a/Apps/UI/Public/home.html
+++ b/Apps/UI/Public/home.html
@@ -1,54 +1,18 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-    <title>Projeto SD - Mapa em Tempo Real</title>
-
-    <style>
-        #map { height: 500px; width: 80%; }
-        pre { background: #f4f4f4; padding: 10px; }
-    </style>
-
-</head>
-
-<body>
-    <h1>Mapa Interativo (Fase 1)</h1>
-    
-    <div id="map"></div>
-
-    <h2>Dados em Bruto (do Consumidor)</h2>
-    <pre><div id="data-container">A carregar...</div></pre>
-
-    <script src="app.js"></script>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Projeto SD - Mapa em Tempo Real</title>
-
-    <!-- Leaflet CSS/JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <style>
-        :root {
-            color-scheme: light dark;
-        }
+        :root { color-scheme: light dark; }
         * { box-sizing: border-box; }
-        html, body { height: 100%; }
+        html, body { height: 100%; margin: 0; }
         body {
-            margin: 0;
-            font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, sans-serif;
             line-height: 1.4;
             background: #ffffff;
             color: #222;
@@ -59,15 +23,8 @@
             margin: 0 auto;
         }
         header { padding: 20px 0 10px; }
-        header h1 {
-            margin: 0 0 6px;
-            font-size: 1.6rem;
-        }
-        header p {
-            margin: 0;
-            color: #666;
-            font-size: 0.95rem;
-        }
+        header h1 { margin: 0 0 6px; font-size: 1.6rem; }
+        header p { margin: 0; color: #666; font-size: 0.95rem; }
         #map {
             height: 60vh;
             min-height: 420px;
@@ -75,17 +32,20 @@
             border-radius: 10px;
             border: 1px solid #e5e5e5;
             overflow: hidden;
+            margin: 20px 0;
         }
-        pre { background: #f7f7f7; padding: 10px; border-radius: 8px; overflow: auto; }
+        pre {
+            background: #f7f7f7;
+            padding: 10px;
+            border-radius: 8px;
+            overflow: auto;
+            max-height: 300px;
+        }
         footer {
             padding: 16px 0 28px;
             color: #777;
             font-size: 0.9rem;
             text-align: center;
-        }
-        @media (max-width: 640px) {
-            header h1 { font-size: 1.3rem; }
-            #map { min-height: 360px; }
         }
     </style>
 </head>
@@ -93,16 +53,17 @@
 <body>
     <header>
         <h1>Projeto SD - Mapa em Tempo Real</h1>
-        <p>Prova de HTML</p>
+        <p>Visualização de corredores com dados da API</p>
     </header>
 
     <main>
-        <section style="margin: 14px 0 18px;">
-            <p>Visualização base com Leaflet e OpenStreetMap.</p>
-        </section>
-
         <section>
             <div id="map" aria-label="Mapa em tempo real"></div>
+        </section>
+
+        <section style="margin-top: 20px;">
+            <h2>Dados em Bruto (JSON)</h2>
+            <pre><div id="data-container">A carregar...</div></pre>
         </section>
     </main>
 
@@ -110,22 +71,6 @@
         <small>&copy; Grupo 2 — Sistemas Distribuídos</small>
     </footer>
 
-    <!-- <script>
-        // Inicialização básica do mapa (centro: Lisboa)
-        const map = L.map('map', {
-            zoomControl: true
-        }).setView([38.736946, -9.142685], 12);
-
-        // Camada de tiles (OpenStreetMap)
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '&copy; OpenStreetMap contributors'
-        }).addTo(map);
-
-        // Exemplo: marcador inicial
-        const marker = L.marker([38.736946, -9.142685]).addTo(map);
-        marker.bindPopup('Centro inicial: Lisboa').openPopup();
-    </script> -->
     <script src="app.js"></script>
 </body>
 </html>
