--- a/Apps/UI/Public/home.html
+++ b/Apps/UI/Public/home.html
@@ -109,16 +109,17 @@
         </section>
 
         <section style="margin-top: 30px;">
-            <h2>Tabela de Classificação (Top 10)</h2>
+            <h2>Tabela de Classificação (Top 10 mais rápidos)</h2>
             <table id="ranking-table">
                 <thead>
                     <tr>
                         <th>Posição</th>
                         <th>ID do Participante</th>
-                        <th>Posição X</th>
-                        <th>Posição Y</th>
+                        <th>Velocidade Total</th>
                         <th>Velocidade X</th>
                         <th>Velocidade Y</th>
+                        <th>Posição X</th>
+                        <th>Posição Y</th>
                     </tr>
                 </thead>
                 <tbody id="ranking-body">
