--- a/Apps/UI/Public/home.html
+++ b/Apps/UI/Public/home.html
@@ -31,16 +31,58 @@
             padding: 12px;
             background: #f7f7f7;
             border-radius: 8px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            flex-wrap: wrap;
         }
         .filter-container label {
             font-weight: 500;
-            margin-right: 8px;
         }
         .filter-container input {
             padding: 6px 12px;
             border: 1px solid #ddd;
             border-radius: 4px;
             font-size: 0.95rem;
+            flex: 1;
+            min-width: 200px;
+        }
+        .btn {
+            padding: 6px 16px;
+            border: none;
+            border-radius: 4px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .btn-primary {
+            background: #007bff;
+            color: white;
+        }
+        .btn-primary:hover {
+            background: #0056b3;
+        }
+        .btn-secondary {
+            background: #6c757d;
+            color: white;
+        }
+        .btn-secondary:hover {
+            background: #545b62;
+        }
+        .btn-small {
+            padding: 4px 8px;
+            font-size: 0.8rem;
+        }
+        .copy-btn {
+            background: #28a745;
+            color: white;
+            cursor: pointer;
+        }
+        .copy-btn:hover {
+            background: #218838;
+        }
+        .copy-btn:active {
+            background: #1e7e34;
         }
         
         #map {
@@ -99,7 +141,9 @@
         
         <div class="filter-container">
             <label for="filter-input">Filtrar por ID:</label>
-            <input type="text" id="filter-input" placeholder="ex: 1, 2, 3">
+            <input type="text" id="filter-input" placeholder="ex: 1, 2, 3 (separados por vírgula)">
+            <button id="apply-filter-btn" class="btn btn-primary">Aplicar Filtro</button>
+            <button id="clear-filter-btn" class="btn btn-secondary">Limpar</button>
         </div>
     </header>
 
@@ -120,10 +164,11 @@
                         <th>Velocidade Y</th>
                         <th>Posição X</th>
                         <th>Posição Y</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody id="ranking-body">
-                    <tr><td colspan="6">A carregar...</td></tr>
+                    <tr><td colspan="8">A carregar...</td></tr>
                 </tbody>
             </table>
         </section>
