--- a/Apps/UI/Public/home.html
+++ b/Apps/UI/Public/home.html
@@ -136,7 +136,7 @@
 
 <body>
     <header>
-        <h1>Projeto SD - Mapa em Tempo Real</h1>
+        <h1>Projeto SD - Mapa em Tempo Real 2.0</h1>
         <p>Visualização de corredores com dados da API</p>
         
         <div class="filter-container">
